--- a/saas_analysis.ipynb
+++ b/saas_analysis.ipynb
@@ -182,148 +182,6 @@
      "output_type": "stream",
      "text": [
       "\n",
-      " data_cluster\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 3397 entries, 0 to 3396\n",
-      "Data columns (total 8 columns):\n",
-      " #   Column              Non-Null Count  Dtype \n",
-      "---  ------              --------------  ----- \n",
-      " 0   leads_id            3397 non-null   int64 \n",
-      " 1   leads_registered    3397 non-null   object\n",
-      " 2   number_of_employee  3397 non-null   int64 \n",
-      " 3   industry            3397 non-null   object\n",
-      " 4   session_source      3397 non-null   object\n",
-      " 5   total_visits        3397 non-null   int64 \n",
-      " 6   first_visits        3397 non-null   object\n",
-      " 7   cluster             3397 non-null   int64 \n",
-      "dtypes: int64(4), object(4)\n",
-      "memory usage: 212.4+ KB\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "None"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>leads_id</th>\n",
-       "      <th>leads_registered</th>\n",
-       "      <th>number_of_employee</th>\n",
-       "      <th>industry</th>\n",
-       "      <th>session_source</th>\n",
-       "      <th>total_visits</th>\n",
-       "      <th>first_visits</th>\n",
-       "      <th>cluster</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>244</td>\n",
-       "      <td>2021-02-03 14:36:48+00:00</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Education</td>\n",
-       "      <td>CPC</td>\n",
-       "      <td>3</td>\n",
-       "      <td>/form/demo</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>290</td>\n",
-       "      <td>2021-02-23 14:27:36+00:00</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Education</td>\n",
-       "      <td>Organic Social</td>\n",
-       "      <td>2</td>\n",
-       "      <td>/features</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>425</td>\n",
-       "      <td>2021-03-30 15:10:12+00:00</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Education</td>\n",
-       "      <td>CPC</td>\n",
-       "      <td>4</td>\n",
-       "      <td>/home</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>437</td>\n",
-       "      <td>2021-04-01 15:39:02+00:00</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Education</td>\n",
-       "      <td>Organic Social</td>\n",
-       "      <td>4</td>\n",
-       "      <td>/features</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>462</td>\n",
-       "      <td>2021-04-06 10:44:11+00:00</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Education</td>\n",
-       "      <td>Organic Social</td>\n",
-       "      <td>3</td>\n",
-       "      <td>/studycase</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   leads_id           leads_registered  number_of_employee   industry  \\\n",
-       "0       244  2021-02-03 14:36:48+00:00                   5  Education   \n",
-       "1       290  2021-02-23 14:27:36+00:00                   5  Education   \n",
-       "2       425  2021-03-30 15:10:12+00:00                   5  Education   \n",
-       "3       437  2021-04-01 15:39:02+00:00                   5  Education   \n",
-       "4       462  2021-04-06 10:44:11+00:00                   5  Education   \n",
-       "\n",
-       "   session_source  total_visits first_visits  cluster  \n",
-       "0             CPC             3   /form/demo        2  \n",
-       "1  Organic Social             2    /features        2  \n",
-       "2             CPC             4        /home        0  \n",
-       "3  Organic Social             4    /features        0  \n",
-       "4  Organic Social             3   /studycase        2  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
       " discounts\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 442 entries, 0 to 441\n",
@@ -1070,106 +928,6 @@
        "2  2021-Apr  5,000,000  4,800,000      3,000,000      5,500,000  12,500,000\n",
        "3  2021-Aug  4,000,000  5,500,000      3,800,000      5,000,000  11,500,000\n",
        "4  2021-Dec  7,000,000  8,000,000      9,500,000      7,800,000  24,000,000"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      " most_visits\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 25 entries, 0 to 24\n",
-      "Data columns (total 3 columns):\n",
-      " #   Column        Non-Null Count  Dtype \n",
-      "---  ------        --------------  ----- \n",
-      " 0   cluster       25 non-null     int64 \n",
-      " 1   Page_Name     25 non-null     object\n",
-      " 2   count_visits  25 non-null     int64 \n",
-      "dtypes: int64(2), object(1)\n",
-      "memory usage: 728.0+ bytes\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "None"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cluster</th>\n",
-       "      <th>Page_Name</th>\n",
-       "      <th>count_visits</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>/features</td>\n",
-       "      <td>1247</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>/form/brochure</td>\n",
-       "      <td>833</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>/form/demo</td>\n",
-       "      <td>924</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>/form/publications</td>\n",
-       "      <td>407</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>/form/set-a-meeting</td>\n",
-       "      <td>834</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   cluster            Page_Name  count_visits\n",
-       "0        0            /features          1247\n",
-       "1        0       /form/brochure           833\n",
-       "2        0           /form/demo           924\n",
-       "3        0   /form/publications           407\n",
-       "4        0  /form/set-a-meeting           834"
       ]
      },
      "metadata": {},
@@ -3188,7 +2946,7 @@
     "tags": []
    },
    "source": [
-    "### Clustering model using new contracts (deal won) data only"
+    "## Clustering model using new contracts (deal won) data only"
    ]
   },
   {
@@ -3976,11 +3734,10 @@
    "cell_type": "markdown",
    "id": "5c0ea41d-c4e5-439f-9208-c7cd5f63aa9c",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
-    "## Export the data for Visualization"
+    "# Export the data for Visualization"
    ]
   },
   {
